--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -6,5 +6,5 @@ font-style: normal;
   font-size: 18px;
   line-height: 22px;
   text-decoration-line: underline;
-  color: #FFFFFF
+  color: #FFFFFF;
 } 
