--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,30 +3,13 @@
   font-style: normal;
   font-weight: normal;
   text-align: center;
+  margin: 0;
 }
 
-@media screen and (min-width: 1279px){
+@media screen and (min-width: 767px){
   .cover__subtitle{
-    width: 360px;
-    height: 66px;
-    font-size: 18px;
-    line-height: 22px;
-  }
-}
-
-@media screen and (min-width: 1023px) and (max-width:1279px){
-  .cover__subtitle{
-    width: 360px;
-    height: 66px;
-    font-size: 18px;
-    line-height: 22px;
-  }
-}
-  
-@media screen and (min-width: 767px) and (max-width: 1023px){
-  .cover__subtitle{
-    width: 360px;
-    height: 66px;
+    max-width: 360px;
+    max-height: 66px;
     font-size: 18px;
     line-height: 22px;
     }
@@ -34,8 +17,8 @@
   
 @media screen and (max-width: 767px){
   .cover__subtitle{
-    width: 288px;
-    height: 48px;
+    max-width: 288px;
+    max-height: 48px;
     font-size: 14px;
     line-height: 16px;
     }
