--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,40 +3,23 @@
   font-style: normal;
   font-weight: 900;
   text-align: center;
-}
-
-@media screen and (min-width: 1279px){
-  .cover__title{
-    width: 560px;
-    height: 152px;
-    font-size: 72px;
-    line-height: 76px;
-  }
-}
-
-@media screen and (min-width: 1023px) and (max-width:1279px){
-  .cover__title{
-    width: 560px;
-    height: 152px;
-    font-size: 72px;
-    line-height: 76px;
-  }
+  margin: 0;
 }
   
-@media screen and (min-width: 767px) and (max-width: 1023px){
+@media screen and (min-width: 767px){
   .cover__title{
-    width: 560px;
-    height: 152px;
+    max-width: 560px;
     font-size: 72px;
     line-height: 76px;
+    padding-bottom: 32px;
     }
 }
   
 @media screen and (max-width: 767px){
   .cover__title{
-    width: 288px;
-    height: 70px;
+    max-width: 288px;
     font-size: 32px;
     line-height: 35px;
+    padding-bottom: 16px;
   }
 }
