--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,25 +3,9 @@
   font-style: normal;
   font-weight: normal;
   color: #FFFFFF;
-}
-
-@media screen and (min-width: 1279px){
-  .footer__copyright{
-    font-size: 14px;
-    line-height: 16px;
-    text-align: right;
-  }
-}
-
-@media screen and (min-width: 1023px) and (max-width:1279px){
-  .footer__copyright{
-    font-size: 14px;
-    line-height: 16px;
-    text-align: right;
-  }
-}
-  
-  @media screen and (min-width: 767px) and (max-width: 1023px){
+  margin:0;
+}  
+  @media screen and (min-width: 767px){
     .footer__copyright{
       font-size: 14px;
       line-height: 16px;
