--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,31 +1,19 @@
 .footer__links{
   display: grid;
-}
-
-@media screen and (min-width: 1279px){
-  .footer__links{
-    grid-template-columns: repeat(5, 1fr);
-    gap: 0px 18px;
-  }
-}
-
-@media screen and (min-width: 1023px) and (max-width:1279px){
-  .footer__links{
-    grid-template-columns: repeat(5, 1fr);
-    gap: 0px 18px;
-  }
+  margin: 0;
+  padding: 0;
 }
   
-@media screen and (min-width: 767px) and (max-width: 1023px){
+@media screen and (min-width: 767px){
   .footer__links{
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(5, auto);
     gap: 0px 18px;
   }
 }
   
 @media screen and (max-width: 767px){
   .footer__links{
-    grid-template-columns: repeat(1fr);
+    grid-template-columns: repeat(auto);
     gap: 32px 0px;
   }
 }
