--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,4 @@
 .lead__caption{
-  width: 158px;
-  height: 14px;
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
@@ -10,6 +8,8 @@
   padding-top: 8px;
   margin: 0px;
   align-self: start;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
 }
 
 @media screen and (min-width: 767px) and (max-width: 1023px){
