--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -4,14 +4,26 @@
   font-style: normal;
   font-weight: normal;
   padding-bottom: 25px;
-  font-size: 18px;
-  line-height: 163%;
   color: #FFFFFF;
 }
+ 
+@media screen and (min-width: 1023px){
+  .place__paragraph{
+    font-size: 18px;
+    line-height: 163%;
+  }
+}
   
+@media screen and (max-width: 1023px){
+  .place__paragraph{
+    font-size: 16px;
+    line-height: 163%;
+  }
+}
+
 @media screen and (max-width: 767px){
   .place__paragraph{
-    padding-left: 16px;
     padding-right: 16px;
+    padding-left: 16px;
   }
-} 
+}
