--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,10 +1,14 @@
-
+.places{
+  display: grid;
+  grid-template-columns: 1fr;
+}
 @media screen and (min-width: 1279px){
 
   .places{
     padding-bottom: 92px;
     padding-left: 148px;
     padding-right:148px;
+    gap: 80px 0px;
   }
 }
 @media screen and (min-width: 1023px) and (max-width:1279px){
@@ -12,6 +16,7 @@
     padding-bottom: 92px;
     padding-left: 48px;
     padding-right: 48px;
+    gap: 80px 0px;
   }
 }
 @media screen and (min-width: 767px) and (max-width: 1023px){
@@ -19,6 +24,7 @@
     padding-bottom: 88px;
     padding-left: 24px;
     padding-right: 24px;
+    gap: 72px 0px;
   }
 }
 @media screen and (max-width: 767px){
@@ -26,5 +32,6 @@
     padding-bottom: 64px;
     padding-left: 0px;
     padding-right: 0px;
+    gap: 50px 0px;
   }
 } 
