--- a/pages/index.css
+++ b/pages/index.css
@@ -6,11 +6,13 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__lang-list/heder__lang-list.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__tite.css);
 @import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__text-accent/intro__text-accent.css);
 
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/lead/__image/lead__image.css);
