--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,6 @@
-.footer__copyright{
-  font-family: Inter;
+
+  .footer__copyright{
+  font-family:Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   color: #FFFFFF;
