--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,6 +5,7 @@
   color: #FFFFFF;
   font-family: Inter;
   text-decoration: none;
+  font-family:Inter, Arial, sans-serif;
 }
 
 @media screen and (min-width: 767px){
