--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,11 +2,11 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
-  font-family: Inter;
   font-style: normal;
   font-weight: bold;
   color: #FFFFFF;
   font-size: 12px;
   line-height: 18px;
   max-width: 1000px;
+  font-family:Inter, Arial, sans-serif;
 }
