--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,11 +2,11 @@
   margin: 0;
   padding-bottom: 33px;
   max-width: 720px;
-  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   color: #FFFFFF;
   font-size: 16px;
   line-height: 163%;
+  font-family:Inter, Arial, sans-serif;
 
 }
