--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,6 +4,7 @@
   font-weight: 400;
   text-align: center;
   color: #FFFFFF;
+  font-family:Inter, Arial, sans-serif;
 }
 
 @media screen and (min-width: 767px){
