--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,9 +1,9 @@
 .lead__title{
-  font-family: Inter;
   font-style: normal;
   font-weight: 900;
   color: #FFFFFF;
   text-align: center;
+  font-family:Inter, Arial, sans-serif;
 }
 
 @media screen and (min-width: 767px){
