--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin:auto;
+  margin:0 auto;
 }
 
 @media screen and (min-width: 1279px){
