--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-self: end;
+  font-family:Inter, Arial, sans-serif;
 }
 
 @media screen and (max-width: 767px){
