--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,10 +1,10 @@
 .place__paragraph{
   margin:0px;
-  font-family: Inter;
   font-style: normal;
   font-weight: normal;
   padding-bottom: 25px;
   color: #FFFFFF;
+  font-family:Inter, Arial, sans-serif;
 }
  
 @media screen and (min-width: 1023px){
