--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,9 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
-@import url(../blocks/page/page.css);
+
+@import url(../blocks/body/body.css);
+
+@import url(../blocks/content/content.css);
 
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -19,7 +22,6 @@
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/lead.css);
-@import url(../blocks/lead/__road/lead__road.css);
 
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 @import url(../blocks/photo-grid/photo-grid.css);
@@ -34,7 +36,6 @@
 @import url(../blocks/place/__span/place__span.css);
 
 @import url(../blocks/cover/__background/cover__background.css);
-@import url(../blocks/cover/__overlay/__overlay.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/cover.css);
