--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,33 +1,22 @@
 
-@media screen and (min-width: 1279px){
+ .cover{
+  max-width: 1184px;
+  }
+@media screen and (min-width: 1023px){
   .cover{
     padding-bottom: 92px;
-    padding-left: 48px;
-    padding-right: 48px;
-    }
-}
-  
-@media screen and (min-width: 1023px) and (max-width:1279px){
-  .cover{
-    padding-bottom: 92px;
-    padding-left: 0px;
-    padding-right: 0px;
     }
 }
   
 @media screen and (min-width: 767px) and (max-width: 1023px){
   .cover{
     padding-bottom: 88px;
-    padding-left: 0px;
-    padding-right: 0px;
     }
 }
   
 @media screen and (max-width: 767px){
   .cover{
     padding-bottom: 64px;
-    padding-left: 0px;
-    padding-right: 0px;
     }
 }
   
