--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  max-height: 1184px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 767px){
