--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   margin: 0px;
-  margin: auto;
+  max-width: 690px;
 }
  
 @media screen and (min-width: 1279px){
