--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   margin:0 auto;
+  max-width: 984px;
 }
 
 @media screen and (min-width: 1279px){
