--- a/blocks/header/__lang-list/heder__lang-list.css
+++ b/blocks/header/__lang-list/heder__lang-list.css
@@ -3,5 +3,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 0px 18px;
   margin: 0;
-  padding: 0;    
+  padding: 0;
+  list-style-type: none;
+  align-items: flex-end;
 }
