--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,14 +2,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0px;
-  max-width: 690px;
+  margin: 0 auto;
+  text-align: left;
 }
  
 @media screen and (min-width: 1279px){
   .intro{
-    padding-left: 148px;
-    padding-right: 442px;
+    width: 984px;
     padding-top: 92px;
     padding-bottom: 0px;
   }
