--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,5 +1,5 @@
 .place__website{
-  font-family: Inter;
+  font-family:Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   padding-top: 12px;
