--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,15 +2,15 @@
   display: flex;
   max-width: 1184px;
   margin: 0 auto;
+  justify-content: space-between;
 }
 
-@media screen and (min-width: 1023px){
+@media screen and (min-width: 1023px) and (max-width: 1279px){
   .footer{
     padding-left: 48px;
     padding-right: 48px;
     padding-bottom: 24px;
     flex-direction: row;
-    justify-content: space-between;
   }
 }
   
