--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,13 +6,13 @@
   margin: 0 auto;
 }
 
-@media screen and (min-width: 1023px){
+@media screen and (min-width: 1023px) and (max-width: 1279px){
   .header{
     padding: 28px 48px 0px;
   }
 }
 
-@media screen and (min-width: 767px) and (max-width: 1023){
+@media screen and (min-width: 767px) and (max-width: 1023px){
   .header{
     padding: 28px 24px 0px;
   }
