--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,15 +2,24 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0 auto;
   text-align: left;
   max-width: 984px;
 }
-    
-@media screen and (min-width: 1023px){
+
+@media screen and (min-width: 1279px){
   .intro{
+    margin: 0 auto;
     width: 100%;
     padding-top: 92px;
+    padding-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1023px) and (max-width: 1279px){
+  .intro{
+    padding-top: 92px;
+    padding-left: 48px;
+    padding-right: 286px;
     padding-bottom: 0px;
   }
 }
