--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -8,5 +8,22 @@
   font-size: 12px;
   line-height: 18px;
   font-family:Inter, Arial, sans-serif;
-  max-width: 690px;
+}
+
+@media screen and (min-width: 1023px){
+  .intro__list{
+    max-width: 690px;
+  }
+}
+  
+@media screen and (min-width: 767px) and (max-width: 1023px){
+  .intro__list{
+    max-width: 720px;
+  }
+}
+  
+@media screen and (max-width: 767px){
+  .intro__list{
+    max-width: 690px;
+  }
 }
