--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,12 +1,28 @@
 .intro__text{
   margin: 0;
   padding-bottom: 33px;
-  max-width: 690px;
   font-style: normal;
   font-weight: normal;
   color: #FFFFFF;
   font-size: 16px;
   line-height: 163%;
   font-family:Inter, Arial, sans-serif;
+}
 
+@media screen and (min-width: 1023px){
+  .intro__text{
+    max-width: 690px;
+  }
+}
+  
+@media screen and (min-width: 767px) and (max-width: 1023px){
+  .intro__text{
+    max-width: 720px;
+  }
+}
+  
+@media screen and (max-width: 767px){
+  .intro__text{
+    max-width: 690px;
+  }
 }
