--- a/blocks/intro/__title/intro__tite.css
+++ b/blocks/intro/__title/intro__tite.css
@@ -1,15 +1,23 @@
 .intro__title{
   padding-bottom: 40px;
-  max-width: 690px;
   font-style: normal;
   font-weight: 900;
   color: #FFFFFF;
   margin: 0;
   font-family:Inter, Arial, sans-serif;
 }
-  
-@media screen and (min-width: 767px){
+
+@media screen and (min-width: 1023px){
   .intro__title{
+    max-width: 690px;
+    font-size: 54px;
+    line-height: 58px;
+  }
+}
+  
+@media screen and (min-width: 767px) and (max-width: 1023px){
+  .intro__title{
+    max-width: 720px;
     font-size: 54px;
     line-height: 58px;
   }
@@ -17,6 +25,7 @@
   
 @media screen and (max-width: 767px){
   .intro__title{
+    max-width: 690px;
     font-size: 32px;
     line-height: 35px;
   }
